Fixed: Snazzy search design is now properly aligned

--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ header h5:hover {
     overflow-x: auto;
     display: flex;
     width: 100%;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 .addButton {
@@ -98,7 +100,6 @@ header h5:hover {
 #search {
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 #search input {
@@ -110,8 +111,6 @@ header h5:hover {
 
 #searchField-container {
     width: 100%;
-    text-align: center;
-    flex: 1 0 0;
 }
 
 .no-poster {
